refactor: Refactor UserAgentRotator package and update dependencies.
Moved UserAgentRotator to the "scraping" package for better organization. Replaced `List.of` with `Arrays.asList` for compatibility and updated the user agents list to include a Linux entry.